# robot_simulation

./: .gitignore  Dockerfile  README.md  TaskDescription.md  docker-compose.wsl2.yml  docker-compose.yml  entrypoint.sh  run_ros2_docker.sh
config/: params.yaml
src/lite6_pick_place/: package.xml  setup.cfg  setup.py
src/lite6_pick_place/config/: params.yaml
src/lite6_pick_place/launch/: pick_place.launch.py
src/lite6_pick_place/lite6_pick_place/: motion_planner.py  pick_place_node.py  scene_manager.py
